# untitled_auth

./: Cargo.toml  Dockerfile
k8/: deploy.yaml
src/: lib.rs  main.rs
src/axum/: mod.rs
src/axum/responders/: json_or_protobuf.rs
src/client/: mod.rs  response.rs
src/client/axum/extractors/: auth_client.rs  authenticate.rs  mod.rs
src/host/: configuration.rs  mod.rs  routes.rs
src/host/axum/extractors/: mod.rs
src/host/jwt/: configuration.rs
src/host/repository/users/: cache.rs  error.rs  mod.rs  mongo.rs  postgres.rs
src/host/web/: request.rs  response.rs  routes.rs
src/jwt/: claims_user.rs
src/repository/: deadpool.rs  error.rs  mod.rs
src/repository/users/: cache.rs  mod.rs  mongo.rs  postgres.rs
src/web/: request.rs  response.rs  routes.rs
