[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[features]
default = ["host"]
host = [
    "dep:tokio", 
    "dep:tower", 
    "dep:tower-layer", 
    "dep:axum", 
    "dep:axum-extra", 
    "dep:bytes", 
    "dep:log", 
    "dep:env_logger", 
    "dep:futures", 
    "dep:serde", 
    "dep:serde_json",
    "dep:sqlx",
    "dep:deadpool",
    "dep:scrypt",
    "dep:sha2",
    "dep:hmac",
    "dep:jwt",
    "dep:rand"
]
client = ["dep:reqwest"]
axum = ["client", "dep:axum"]

[dependencies.tokio] 
version = "1.36.0"
features = ["full"]
optional = true

[dependencies.tower] 
version = "0.4.13"
optional = true

[dependencies.tower-layer] 
version = "0.3.2"
optional = true

[dependencies.axum] 
version = "0.7.4"
features = ["multipart"]
optional = true

[dependencies.axum-extra] 
version = "0.9.3"
features = ["protobuf"]
optional = true

[dependencies.bytes] 
version = "1.6.0"
optional = true

[dependencies.log] 
version = "0.4.20"
optional = true

[dependencies.env_logger] 
version = "0.11.3"
optional = true

[dependencies.futures] 
version = "0.3.30"
optional = true

[dependencies.serde] 
version = "1.0.197"
features = ["derive"]
optional = true

[dependencies.serde_json] 
version = "1.0.114"
optional = true

[dependencies.prost]
version = "0.12.4"

[dependencies.sqlx] 
version = "0.7.3"
features = [ "runtime-tokio", "tls-native-tls", "postgres" ]
optional = true

[dependencies.deadpool] 
version = "0.12.0"
features = ["managed"]
optional = true

[dependencies.scrypt] 
version = "0.11.0"
optional = true

[dependencies.sha2] 
version = "0.10.8"
optional = true

[dependencies.hmac] 
version = "0.12.1"
optional = true

[dependencies.jwt] 
version = "0.16.0"
optional = true

[dependencies.rand] 
version = "0.8.5"
optional = true

[dependencies.reqwest]
version = "0.12.4"
optional = true