[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-layer = "0.3.2"
axum = { version = "0.7.4", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["protobuf"] }
bytes = "1.6.0"
log = "0.4.20"
env_logger = "0.11.3"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
prost = "0.12.4"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
deadpool = { version = "0.12.0", features = ["managed"] }
scrypt = "0.11.0"
sha2 = "0.10.8"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
users_client = { git = "https://github.com/chasb96/untitled_users_client", default-features = false }
or_status_code = { git = "https://github.com/chasb96/or_status_code" }
log_unwrap = { git = "https://github.com/chasb96/log_unwrap" }
log_layer = { git = "https://github.com/chasb96/log_layer" }
redis = { version = "0.25.4", features = ["async-std-comp", "aio", "ahash", "r2d2"] }
mongodb = "3.0.0"